samples/bad/imports-dependson-name-missing/imports.mf
<imports>
  <package name="SamplePackage" path=".">
    <dependson />
  </package>
</imports>
